src/snapshots/xot__pretty__tests__comment.snap
---
source: src/pretty.rs
expression: s
---
<doc>
  <a>
    <!--hello-->
    <!--world-->
  </a>
</doc>

