src/snapshots/xot__pretty__tests__mixed, comment.snap
---
source: src/pretty.rs
expression: "<doc><p>Hello <!--world-->!</p></doc>"
---
<doc>
  <p>Hello <!--world-->!</p>
</doc>

