src/snapshots/xot__pretty__tests__mixed, multi.snap
---
source: src/pretty.rs
expression: "<doc><p>Hello <em>world</em>!</p><p>Greetings, <strong>universe</strong>!</p></doc>"
---
<doc>
  <p>Hello <em>world</em>!</p>
  <p>Greetings, <strong>universe</strong>!</p>
</doc>

