src/snapshots/xot__pretty__tests__mixed, nested.snap
---
source: src/pretty.rs
expression: "<doc><p>Hello <em><strong>world</strong></em>!</p></doc>"
---
<doc>
  <p>Hello <em><strong>world</strong></em>!</p>
</doc>

