src/snapshots/xot__pretty__tests__mixed.snap
---
source: src/pretty.rs
expression: "<doc><p>Hello <em>world</em>!</p></doc>"
---
<doc>
  <p>Hello <em>world</em>!</p>
</doc>

