src/snapshots/xot__pretty__tests__more elements.snap
---
source: src/pretty.rs
expression: "<doc><a><b/></a><a><b/><b/></a></doc>"
---
<doc>
  <a>
    <b/>
  </a>
  <a>
    <b/>
    <b/>
  </a>
</doc>

