src/snapshots/xot__pretty__tests__multi pi.snap
---
source: src/pretty.rs
expression: "<doc><a><?pi?><?pi?></a></doc>"
---
<doc>
  <a>
    <?pi?>
    <?pi?>
  </a>
</doc>

