src/snapshots/xot__pretty__tests__multiple_mixed.snap
---
source: src/pretty.rs
expression: s
---
<doc>
  <p>Hello <em>world</em>!</p>
  <p>Greetings, <strong>universe</strong>!</p>
</doc>

