src/snapshots/xot__pretty__tests__not suppressed.snap
---
source: src/pretty.rs
expression: "<doc><a><b/></a></doc>"
---
<doc>
  <a>
    <b/>
  </a>
</doc>

