src/snapshots/xot__pretty__tests__only_elements_multi.snap
---
source: src/pretty.rs
expression: s
---
<doc>
  <a>
    <b/>
  </a>
  <a>
    <b/>
    <b/>
  </a>
</doc>

