src/snapshots/xot__pretty__tests__preserve.snap
---
source: src/pretty.rs
expression: "<doc xml:space=\"preserve\"><p>Hello</p></doc>"
---
<doc xml:space="preserve"><p>Hello</p></doc>

